<resources>
    <string name="app_name">TimetableApp</string>
    <string name="timetable_label">Timetable</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This username is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing username
        completions."
    </string>
    <string name="evision_url">https://evision.otago.ac.nz/sitsvision/wrd/siw_lgn</string>

    <!-- Timetable Related -->
    <string name="tt_label_day_1">Day 1</string>
    <string name="tt_label_day_2">Day 2</string>
    <string name="tt_label_day_3">Day 3</string>
    <string name="tt_label_day_4">Day 4</string>
    <string name="tt_label_day_5">Day 5</string>
    <string name="tt_label_day_6">Day 6</string>
    <string name="tt_label_day_7">Day 7</string>

    <string name="tt_date_day_1">Day 1\'s Date</string>
    <string name="tt_date_day_2">Day 2\'s Date</string>
    <string name="tt_date_day_3">Day 3\'s Date</string>
    <string name="tt_date_day_4">Day 4\'s Date</string>
    <string name="tt_date_day_5">Day 5\'s Date</string>
    <string name="tt_date_day_6">Day 6\'s Date</string>
    <string name="tt_date_day_7">Day 7\'s Date</string>
    <string name="title_activity_view_event">View</string>

    <!-- Menu Related -->
    <string name="mn_label_edit">Edit</string>
    <string name="mn_label_save">Save</string>
    <string name="mn_label_discard">Discard</string>
    <string name="mn_label_delete">Delete</string>
    <string name="mn_label_refresh">Refresh</string>
    <string name="mn_label_search">Search</string>
    <string name="mn_label_settings">Settings</string>
    <string name="mn_label_add">New event</string>

    <!-- Edit Related - Defaults -->
    <string name="title_activity_edit_event">Edit</string>
    <string name="edit_label_building">Building</string>

    <!-- Edit Related - Placeholders -->
    <string name="edit_ph_paper">e.g. HUBS191</string>
    <string name="edit_ph_paperName">e.g. Microbiology &amp; Immune&#8230;</string>
    <string name="edit_ph_roomCode">CASTA</string>
    <string name="edit_ph_building">e.g. Castle</string>
    <string name="edit_ph_timeDate">Time/Date</string>

    <!-- Maps -->
    <string name="google_android_map_api_key">AIzaSyB1MxKPBv4m5DkVzF7Fl9hb87oIcJZ2bfI</string>

    <!-- View Related - Defaults -->
    <string name="view_label_paper">Paper Code</string>
    <string name="view_label_timeDate">Time/Date</string>
    <string name="view_label_paperName">Paper Name</string>
    <string name="view_label_roomCode">Room Code</string>
    <string name="view_label_colour">Colour</string>
    <string name="view_label_location">Location</string>

    <!-- Intent Filter Titles -->
    <string name="filter_title_login">Login</string>
    <string name="filter_title_timetable">Timetable</string>

</resources>
