<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.seng.timetableapp.ViewEventActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:id="@+id/scrollView3">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/viewColour"
                android:layout_width="163dp"
                android:layout_height="37dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/view_label_colour"
                android:textAlignment="center"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="@+id/viewPaperTitle"
                app:layout_constraintTop_toBottomOf="@+id/viewPaperTitle" />

            <TextView
                android:id="@+id/viewLocation"
                android:layout_width="175dp"
                android:layout_height="37dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/view_label_location"
                android:textAlignment="center"
                app:layout_constraintLeft_toRightOf="@+id/viewColour"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/viewRoomCode" />

            <TextView
                android:id="@+id/viewPaperTitle"
                android:layout_width="163dp"
                android:layout_height="37dp"
                android:layout_marginTop="8dp"
                android:text="@string/view_label_paperName"
                android:textAlignment="center"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="@+id/viewPaperCode"
                app:layout_constraintTop_toBottomOf="@+id/viewPaperCode"
                android:layout_marginStart="16dp" />

            <TextView
                android:id="@+id/viewRoomCode"
                android:layout_width="175dp"
                android:layout_height="37dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/view_label_roomCode"
                android:textAlignment="center"
                app:layout_constraintHorizontal_bias="0.428"
                app:layout_constraintLeft_toRightOf="@+id/viewPaperTitle"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/viewTimeDate" />

            <TextView
                android:id="@+id/viewPaperCode"
                android:layout_width="163dp"
                android:layout_height="37dp"
                android:layout_marginTop="27dp"
                android:text="@string/view_label_paper"
                android:textAlignment="center"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="16dp" />

            <TextView
                android:id="@+id/viewTimeDate"
                android:layout_width="175dp"
                android:layout_height="37dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="27dp"
                android:text="@string/view_label_timeDate"
                android:textAlignment="center"
                app:layout_constraintHorizontal_bias="0.428"
                app:layout_constraintLeft_toRightOf="@+id/viewPaperCode"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.gms.maps.MapView
                android:id="@+id/viewEventMap"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/viewColour" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
